<resources>
    <string name="app_name">Singapore Food</string>

    <!-- For Main Activity -->
    <string name="tvName">Food Name:</string>
    <string name="inputName">Enter Food Name Here</string>
    <string name="tvDesc">Food Description: *</string>
    <string name="inputDesc">Enter Food\'s Description Here</string>
    <string name="tvPrice">Price:</string>
    <string name="inputPrice">Enter Price of Food</string>
    <string name="tvStars">Stars:</string>

    <string name="textviewID">Food ID:</string>
    <string name="btnInsert">INSERT</string>
    <string name="btnSL">SHOW LIST</string>

    <!-- For Show Activity -->
    <string name="tvHeader">SHOW ALL FOOD WITH 5 STARS</string>

    <!-- For Modify Activity -->
    <string name="btnUpdate">UPDATE</string>
    <string name="btnDel">DELETE</string>
    <string name="btnCancel">CANCEL</string>
    <string name="tvInstructions">"* - You can use 'Food Description' field to state why you like the food! :D "</string>

    <!-- For Main Page before MainActivity 1-->
    <string name="headingM">Welcome!</string>
    <string name="button">START</string>
    <string name="description">This is a Food Review App for Singapore Food! \n You can add, edit and delete food items in the list! \n PRESS THE START BUTTON TO GET STARTED :D</string>
    <string name="cbRec">Recommend?</string>

    <string-array name="spinnerItems">
        <item>Recommended</item>
        <item>Not Recommended</item>
    </string-array>

</resources>