<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ModifyActivity">

    <TextView
        android:id="@+id/TVID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amaranth"
        android:text="@string/textviewID"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/idET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20dp"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/TVFName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amaranth"
        android:text="@string/tvName"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20dp"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/TVFDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amaranth"
        android:text="@string/tvDesc"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/fDescET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20dp"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/TVFPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amaranth"
        android:text="@string/tvPrice"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/yearET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20dp"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/TVStar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amaranth"
        android:text="@string/tvStars"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--<RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioB1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/star1" />

            <RadioButton
                android:id="@+id/radioB2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/star2" />

            <RadioButton
                android:id="@+id/radioB3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/star3" />

            <RadioButton
                android:id="@+id/radioB4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/star4" />

            <RadioButton
                android:id="@+id/radioB5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/star5" />
        </RadioGroup>-->

        <RatingBar
            android:id="@+id/rbStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/coiny"
                android:text="@string/btnUpdate"
                android:textColor="#FFDAB9"
                app:backgroundTint="#FF69B4" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/coiny"
                android:text="@string/btnDel"
                android:textColor="#708090"
                app:backgroundTint="#E6E6FA" />
        </LinearLayout>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/coiny"
            android:text="@string/btnCancel"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>